--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,28 +1,31 @@
-<div class="bg-dark">
-  <div class="container">
-    <header
-      class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark p-2">
+  <div class="container-fluid">
+    <a routerLink="" class="navbar-brand">Final Project</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarCollapse"
+      aria-controls="navbarCollapse"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
     >
-      <a
-        href="/"
-        class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
-      >
-        <h1 class="text-light">Final Project</h1>
-      </a>
-
-      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a routerLink="" class="nav-link text-light">Users List</a></li>
-        <li>
-          <a routerLink="NewUser" class="nav-link text-light">New User</a>
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <li class="nav-item">
+          <a routerLink="" class="nav-link" aria-current="page" href="#"
+            >User list</a
+          >
+        </li>
+        <li class="nav-item">
+          <a routerLink="NewUser" class="nav-link" href="#">New User </a>
         </li>
       </ul>
-
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2">
-          Login
-        </button>
         <button type="button" class="btn btn-primary">Sign-up</button>
       </div>
-    </header>
+    </div>
   </div>
-</div>
+</nav>
