--- a/src/app/userlist/userlist.component.css
+++ b/src/app/userlist/userlist.component.css
@@ -11,3 +11,22 @@
   background-color: rgba(0, 123, 255, 0.15);
   border: 1px solid rgba(0, 123, 255, 0.2);
 }
+
+#hide {
+  display: none;
+}
+
+#user-list {
+  display: block;
+}
+#name-list {
+  display: none;
+}
+@media (min-width: 770px) {
+  #user-list {
+    display: none;
+  }
+  #name-list {
+    display: block;
+  }
+}
