Corrected mobile ui of NewUser Component

--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,7 +1,7 @@
 <app-navigation></app-navigation>
 <div class="row">
-  <div class="col-6 m-auto">
-    <div class="card m-auto">
+  <div id="width" class="col-6 m-auto">
+    <div class="card m-auto mt-5">
       <div class="card-header text-center">New User</div>
       <div class="card-body">
         <form
