--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark p-2">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark p-2">
   <div class="container-fluid">
     <a routerLink="" class="navbar-brand">Final Project</a>
     <button
